apps/services/woodpecker/base/ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: woodpecker
  annotations:
    external-dns.alpha.kubernetes.io/hostname: woodpecker.labs.andrewpjackson.com
    external-dns.alpha.kubernetes.io/cloudflare-proxied: "false"
    external-dns.alpha.kubernetes.io/ttl: "120"
    cert-manager.io/cluster-issuer: letsencrypt-production
    acme.cert-manager.io/http01-edit-in-place: "true"
    kubernetes.io/ingress.class: traefik-external
  labels:
    app: woodpecker
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`woodpecker.labs.andrewpjackson.com`)
      kind: Rule
      middlewares:
        - name: traefik-forward-auth
          namespace: traefik
      services:
        - name: woodpecker-server
          port: 80
  tls:
    secretName: labs-andrewpjackson-com-tls
# data:
#   resource.customizations: |
#     extensions/Ingress:
#         health.lua: |
#           hs = {}
#           hs.status = "Healthy"
#           return hs

---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: woodpecker-internal
  annotations:
    external-dns.alpha.kubernetes.io/hostname: woodpecker.labs.andrewpjackson.com
    external-dns.alpha.kubernetes.io/cloudflare-proxied: "false"
    external-dns.alpha.kubernetes.io/ttl: "120"
    cert-manager.io/cluster-issuer: letsencrypt-production
    acme.cert-manager.io/http01-edit-in-place: "true"
    kubernetes.io/ingress.class: traefik-external
  labels:
    app: woodpecker
spec:
  entryPoints:
    - web-int-tls
  routes:
    - match: Host(`woodpecker.labs.andrewpjackson.com`)
      kind: Rule
      services:
        - name: woodpecker-server
          port: 80
  tls:
    secretName: labs-andrewpjackson-com-tls
# data:
#   resource.customizations: |
#     extensions/Ingress:
#         health.lua: |
#           hs = {}
#           hs.status = "Healthy"
#           return hs
